# AI_powered_game

./: .gitignore  pyproject.toml
notebooks/: L1.ipynb  L2.ipynb  L3.ipynb  L4.ipynb  Llm_game_mistral.ipynb  Test_api_google.ipynb  helper.py  test_api_mistral.ipynb
shared_data/: Beastrum.json  Colossus Archipelago.json  Skyback Realms.json  The Colossal Expanse.json  The Skyborne Archipelago.json  The Skyborne Expanse.json  The Skyborne Realms of Aetheria.json  The Spine of the Leviathans.json
