[project]
name = "llm-game"
version = "0.1.0"
description = ""
authors = [
    {name = "raistln",email = "samumarfon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "together (>=1.4.6,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "gradio (>=5.22.0,<6.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "mistralai (>=1.5.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "llm_game", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
